--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+languange: generic
 services: 
     - docker
 
@@ -6,7 +7,7 @@ before_install:
     - docker build -t farisdidin/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-    - docker run -e CI=true farisdidin/react-test npm test -- --coverage
+    - docker run farisdidin/react-test npm test -- --coverage
 
 after_success:
     - docker build -t farisdidin/multi-client  ./client 
