--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - docker build -t farisdidin/react-test -f ./client/Dockerfile.dev ./client 
 
 script: 
-  - docker run farisdidin/react-test npm test -- --coverage
+  - docker run -e CI=true farisdidin/react-test npm test -- --coverage
 
 deploy: 
   provider: script 
